<resources>
    <string name="app_name">DinoCoso_prefatta</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">the Adventures of Dinocoso</string>
    <string name="second_fragment_label">Story 1</string>
    <string name="start">Start</string>

    <string name="previous">Previous</string>

    <string name="hello_first_fragment">the adventure of Dinocoso</string>
    <string name="hello_second_fragment">the adventure of Dinocoso 2</string>
    <string name="fragment_third_label">Story 1</string>
    <string name="fragment_four_label">Story 1</string>
    <string name="fragment_five_label">Srory 1</string>
    <string name="hello">Hello</string>
    <string name="change_the_image">Change the image</string>
    <string name="todo">TODO</string>
    <string name="prev">prev</string>
    <string name="next">Next</string>
    <string name="dino_and_the_love_of_the_piregna">Dino and the love of the piregna</string>
    <string name="_1_to_4">1 to 4</string>
    <string name="todo_2">TODO</string>
    <string name="prev_2">prev</string>
    <string name="next_3">Next</string>
    <string name="_2_to_4">2 to 4</string>
    <string name="dino_and_the_love_of_the_piregna_3">-- Dino and the love of the piregna --</string>
    <string name="todo_3">TODO</string>
    <string name="prev_4">prev</string>
    <string name="next_4">Next</string>
    <string name="_3_to_4">3 to 4</string>
    <string name="dino_and_the_love_of_the_piregna_4">-- Dino and the love of the piregna --</string>
    <string name="todo_4">TODO</string>
    <string name="home">Home</string>
    <string name="_4_to_4">4 to 4</string>
    <string name="dino_and_the_love_of_the_piregna_5">-- Dino and the love of the piregna --</string>
    <string name="todo_5">TODO</string>
    <string name="what_your_name">What\'s your name?</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter">entre</string>
    <string name="say_hello">say hello</string>
    <string name="todo6">TODO</string>
    <string name="fragment_six_label">Say Hello</string>
    <string name="about_dinocoso">About Dinocoso</string>
    <string name="descrizione">"The Adventures of Dinocoso" narrates the daily difficulties that a T-Rew has living in the present day.
Dinocoso faces his difficulties with little spirit, and often ends up getting angry without solving his problems.
Despite all the difficulties he never gives up and always gets back on track without worrying too much.</string>
    <string name="descrizione_due">"The Adventures of Dinocoso" are born in 2020.
The cartoons are all hand-drawn and colored with watercolors, uniposca, and iridescent powders.</string>
    <string name="buttom_about" translatable="false">about dino</string>
</resources>