<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FiveFragment"
    android:padding="16dp">

    <Button
        android:id="@+id/bHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/home"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/buttomStyle"/>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dino4"
        tools:srcCompat="@drawable/dino4"
        android:contentDescription="@string/todo_5" />

    <TextView
        android:id="@+id/piedipag_4to4"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/pièdipag_text_height"
        android:fontFamily="cursive"
        android:text="@string/_4_to_4"
        android:textAlignment="center"
        android:textColor="@color/purple"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.837"
        style="@style/pièdipaginaStyle"/>

    <TextView
        android:id="@+id/text4to4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/body_text_height"
        android:fontFamily="cursive"
        android:text="@string/dino_and_the_love_of_the_piregna_5"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058"
        style="@style/bodyTextStyle"/>
</androidx.constraintlayout.widget.ConstraintLayout>